--- a/features/webgpu.yml
+++ b/features/webgpu.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
 name: WebGPU
-description: TODO
+description: WebGPU is an API for performing operations, such as rendering and computation, on a Graphics Processing Unit.
 spec: https://gpuweb.github.io/gpuweb/
 compat_features:
   - api.GPU
