--- a/features/motion-path.yml
+++ b/features/motion-path.yml
@@ -13,6 +13,9 @@ compat_features:
   - css.properties.offset-path.path
   - css.properties.offset-path.ray
   - css.properties.offset-path.url
+  - css.properties.offset-position
+  - css.properties.offset-position.auto
+  - css.properties.offset-position.normal
   - css.properties.offset-distance
   - css.properties.offset-rotate
   - css.properties.offset-rotate.auto
