--- a/features/draganddrop.yml
+++ b/features/draganddrop.yml
@@ -1,5 +1,5 @@
 name: Drag and Drop
-description: "The Drag and Drop API lets web applications add dragging and dropping of elements and external files such as images onto web pages. Developers can customize which elements can become draggable, the type of feedback the draggable elements produce, and the droppable elements."
+description: "The Drag and Drop API lets users drag and drop elements and external files such as images onto web pages. Developers can customize which elements can become draggable, the type of feedback the draggable elements produce, and the droppable elements."
 spec: https://html.spec.whatwg.org/multipage/dnd.html#dnd
 caniuse: dragndrop
 # This gets closest to matching what Caniuse has.
