--- a/features/navigation.yml
+++ b/features/navigation.yml
@@ -1,5 +1,5 @@
 name: Navigation API
-description: The `navigation` API provides mechanisms to initiate, intercept, and manage browser navigation actions.
+description: The `navigation` API initiates, intercepts, or modifies browser navigation actions. Not to be confused with the `navigator` API.
 spec: https://html.spec.whatwg.org/multipage/nav-history-apis.html#navigation-api
 status:
   compute_from: api.Navigation
