--- a/features/compute-pressure.yml
+++ b/features/compute-pressure.yml
@@ -1,3 +1,4 @@
 name: CPU compute pressure
 description: The `PressureObserver` API monitors CPU load, allowing you to adjust workloads in response to available computing resources. Also known as the Compute Pressure API.
 spec: https://w3c.github.io/compute-pressure/
+group: compute-pressure
