--- a/features/composed-ranges.yml
+++ b/features/composed-ranges.yml
@@ -1,6 +1,8 @@
-name: Selections across shadow tree boundaries
+name: Selection composed ranges
 description: The `window.getSelection().getComposedRanges()` method returns ranges that represent the current user selection, even if the selection spans across shadow tree boundaries.
 spec: https://w3c.github.io/selection-api/#dom-selection-getcomposedranges
-group: selection
+group:
+  - selection
+  - web-components
 compat_features:
   - api.Selection.getComposedRanges
