--- a/features/csp.yml
+++ b/features/csp.yml
@@ -1,8 +1,17 @@
-draft_date: 2024-10-10
-name: Content Security Policy Level 3
-description: TODO
+name: Content Security Policy (CSP)
+description: Content-Security-Policy (CSP) controls the resources which a particular page can fetch or execute, as well as a number of security-relevant policy decisions. This helps guard against cross-site scripting attacks (XSS).
 spec: https://w3c.github.io/webappsec-csp/
+caniuse:
+  - contentsecuritypolicy
+  - contentsecuritypolicy2
+group: security
+status:
+  compute_from: http.headers.Content-Security-Policy
 compat_features:
+  - api.Document.securitypolicyviolation_event
+  - api.Element.securitypolicyviolation_event
+  - api.WorkerGlobalScope.securitypolicyviolation_event
+  - api.HTMLIFrameElement.csp
   - api.CSPViolationReportBody
   - api.CSPViolationReportBody.blockedURL
   - api.CSPViolationReportBody.columnNumber
@@ -16,9 +25,9 @@ compat_features:
   - api.CSPViolationReportBody.sourceFile
   - api.CSPViolationReportBody.statusCode
   - api.CSPViolationReportBody.toJSON
-  - api.Element.securitypolicyviolation_event
   - api.SecurityPolicyViolationEvent
   - api.SecurityPolicyViolationEvent.SecurityPolicyViolationEvent
+  - api.SecurityPolicyViolationEvent.worker_support
   - api.SecurityPolicyViolationEvent.blockedURI
   - api.SecurityPolicyViolationEvent.columnNumber
   - api.SecurityPolicyViolationEvent.disposition
@@ -31,13 +40,17 @@ compat_features:
   - api.SecurityPolicyViolationEvent.sourceFile
   - api.SecurityPolicyViolationEvent.statusCode
   - api.SecurityPolicyViolationEvent.violatedDirective
-  - api.WorkerGlobalScope.securitypolicyviolation_event
-  - http.headers.Content-Security-Policy
+  - html.elements.iframe.csp
+  - html.elements.meta.http-equiv.content-security-policy
   - http.headers.Content-Security-Policy-Report-Only
+  - http.headers.Content-Security-Policy
+  - http.headers.Content-Security-Policy.worker_support
   - http.headers.Content-Security-Policy.base-uri
+  # - http.headers.Content-Security-Policy.block-all-mixed-content (deprecated in BCD)
   - http.headers.Content-Security-Policy.child-src
   - http.headers.Content-Security-Policy.connect-src
   - http.headers.Content-Security-Policy.default-src
+  - http.headers.Content-Security-Policy.fenced-frame-src # Should be moved to fenced-frame?
   - http.headers.Content-Security-Policy.font-src
   - http.headers.Content-Security-Policy.form-action
   - http.headers.Content-Security-Policy.frame-ancestors
@@ -45,14 +58,25 @@ compat_features:
   - http.headers.Content-Security-Policy.img-src
   - http.headers.Content-Security-Policy.manifest-src
   - http.headers.Content-Security-Policy.media-src
+  - http.headers.Content-Security-Policy.meta-element-support
   - http.headers.Content-Security-Policy.object-src
+  # - http.headers.Content-Security-Policy.prefetch-src (deprecated in BCD)
+  - http.headers.Content-Security-Policy.report-sample
   - http.headers.Content-Security-Policy.report-to
+  # - http.headers.Content-Security-Policy.report-uri (deprecated in BCD)
+  # - http.headers.Content-Security-Policy.require-trusted-types-for (already in trusted-types)
   - http.headers.Content-Security-Policy.sandbox
   - http.headers.Content-Security-Policy.script-src
+  - http.headers.Content-Security-Policy.script-src.external_scripts
+  - http.headers.Content-Security-Policy.script-src.inline-speculation-rules # Should be moved to speculation-rules?
+  - http.headers.Content-Security-Policy.script-src.wasm-unsafe-eval
   - http.headers.Content-Security-Policy.script-src-attr
   - http.headers.Content-Security-Policy.script-src-elem
-  - http.headers.Content-Security-Policy.script-src.external_scripts
+  - http.headers.Content-Security-Policy.strict-dynamic
   - http.headers.Content-Security-Policy.style-src
   - http.headers.Content-Security-Policy.style-src-attr
   - http.headers.Content-Security-Policy.style-src-elem
+  # - http.headers.Content-Security-Policy.trusted-types (already in trusted-types)
+  - http.headers.Content-Security-Policy.unsafe-hashes
+  - http.headers.Content-Security-Policy.upgrade-insecure-requests
   - http.headers.Content-Security-Policy.worker-src
