--- a/features/console.yml
+++ b/features/console.yml
@@ -7,7 +7,9 @@ status:
 compat_features:
   - api.console
   - api.console.assert_static
+  - api.console.clear_static
   - api.console.count_static
+  - api.console.countReset_static
   - api.console.debug_static
   - api.console.dir_static
   - api.console.dirxml_static
@@ -18,7 +20,9 @@ compat_features:
   - api.console.info_static
   - api.console.log_static
   - api.console.substitution_strings
+  - api.console.table_static
   - api.console.time_static
   - api.console.timeEnd_static
+  - api.console.timeLog_static
   - api.console.trace_static
   - api.console.warn_static
