--- a/features/console.yml.dist
+++ b/features/console.yml.dist
@@ -163,3 +163,55 @@ compat_features:
   #   safari: "5.1"
   #   safari_ios: "5"
   - api.console.groupCollapsed_static
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "25"
+  #   chrome_android: "25"
+  #   edge: "12"
+  #   firefox: "39"
+  #   firefox_android: "39"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - api.console.clear_static
+
+  # baseline: high
+  # baseline_low_date: 2015-11-12
+  # baseline_high_date: 2018-05-12
+  # support:
+  #   chrome: "27"
+  #   chrome_android: "27"
+  #   edge: "13"
+  #   firefox: "34"
+  #   firefox_android: "34"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - api.console.table_static
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "68"
+  #   chrome_android: "68"
+  #   edge: "79"
+  #   firefox: "62"
+  #   firefox_android: "62"
+  #   safari: "13"
+  #   safari_ios: "13"
+  - api.console.countReset_static
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "71"
+  #   chrome_android: "71"
+  #   edge: "79"
+  #   firefox: "62"
+  #   firefox_android: "62"
+  #   safari: "13"
+  #   safari_ios: "13"
+  - api.console.timeLog_static
