--- a/features/webxr-dom-overlays.yml
+++ b/features/webxr-dom-overlays.yml
@@ -3,4 +3,5 @@ description: A DOM overlay shows 2D DOM content as an interactive, transparent l
 spec: https://immersive-web.github.io/dom-overlays/
 group: webxr
 compat_features:
+  - api.Element.beforexrselect_event
   - api.XRSession.domOverlayState
