--- a/features/webxr-device.yml.dist
+++ b/features/webxr-device.yml.dist
@@ -15,6 +15,8 @@ compat_features:
   #   chrome_android: "79"
   #   edge: "79"
   - api.Navigator.xr
+  - api.WebGL2RenderingContext.makeXRCompatible
+  - api.WebGLRenderingContext.makeXRCompatible
   - api.XRBoundedReferenceSpace
   - api.XRBoundedReferenceSpace.boundsGeometry
   - api.XRFrame
@@ -123,6 +125,13 @@ compat_features:
   #   chrome_android: "84"
   #   edge: "84"
   - api.XRLayer
+
+  # baseline: false
+  # support:
+  #   chrome: "88"
+  #   chrome_android: "88"
+  #   edge: "88"
+  - http.headers.Permissions-Policy.xr-spatial-tracking
 
   # baseline: false
   # support:
