--- a/features/webxr-dom-overlays.yml.dist
+++ b/features/webxr-dom-overlays.yml.dist
@@ -8,4 +8,5 @@ status:
     chrome_android: "83"
     edge: "83"
 compat_features:
+  - api.Element.beforexrselect_event
   - api.XRSession.domOverlayState
