Add missing key to Intl.Locale info

--- a/features/intl-locale-info.yml
+++ b/features/intl-locale-info.yml
@@ -11,3 +11,4 @@ compat_features:
   - javascript.builtins.Intl.Locale.getNumberingSystems
   - javascript.builtins.Intl.Locale.getTextInfo
   - javascript.builtins.Intl.Locale.getTimeZones
+  - javascript.builtins.Intl.Locale.getWeekInfo
