Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/webdriver-compute-pressure.yml
+++ b/features/webdriver-compute-pressure.yml
@@ -1,5 +1,5 @@
-name: WebDriver compute pressure
-description: WebDriver Compute Pressure are WebDriver extension commands for creating, deleting, and updating readings for virtual pressure sources (sources that do not depend on underlying hardware or operating system support).
+name: Virtual pressure sources
+description: The `CreateVirtualPressureSource` WebDriver command creates artificial sources of compute pressure for testing without the need real device sources of compute pressure.
 spec: https://w3c.github.io/compute-pressure/
 group:
   - compute-pressure
