Add keys added in BCD 5.6.6

--- a/features/multi-column.yml
+++ b/features/multi-column.yml
@@ -9,6 +9,7 @@ compat_features:
   - css.properties.column-count
   - css.properties.column-count.auto
   - css.properties.column-width
+  - css.properties.column-width.auto
   - css.properties.columns
   - css.properties.column-gap
   - css.properties.column-gap.multicol_context
