--- a/features/object-position.yml
+++ b/features/object-position.yml
@@ -5,3 +5,4 @@ spec: https://drafts.csswg.org/css-images-3/#the-object-position
 # `caniuse: object-fit` is set in object-fit.yml
 compat_features:
   - css.properties.object-position
+  - css.properties.object-position.applies_to_iframe_elements
