--- a/features/white-space-collapse.yml
+++ b/features/white-space-collapse.yml
@@ -8,3 +8,4 @@ compat_features:
   - css.properties.white-space-collapse.collapse
   - css.properties.white-space-collapse.preserve
   - css.properties.white-space-collapse.preserve-breaks
+  - css.properties.white-space-collapse.preserve-spaces
