--- a/features/webusb.yml
+++ b/features/webusb.yml
@@ -2,8 +2,8 @@ name: WebUSB
 description: The WebUSB API exposes USB compatible devices to web pages.
 spec: https://wicg.github.io/webusb/
 caniuse: webusb
-# TODO: Use an exclusion mechanism when available:
-# https://github.com/web-platform-dx/web-features/issues/841
+status:
+  compute_from: api.Navigator.usb
 compat_features:
   - api.Navigator.usb
   - api.USB
@@ -41,7 +41,7 @@ compat_features:
   - api.USBDevice.deviceVersionMajor
   - api.USBDevice.deviceVersionMinor
   - api.USBDevice.deviceVersionSubminor
-  # - api.USBDevice.forget
+  - api.USBDevice.forget
   - api.USBDevice.isochronousTransferIn
   - api.USBDevice.isochronousTransferOut
   - api.USBDevice.manufacturerName
@@ -95,5 +95,5 @@ compat_features:
   - api.USBOutTransferResult.USBOutTransferResult
   - api.USBOutTransferResult.bytesWritten
   - api.USBOutTransferResult.status
-  # - api.WorkerNavigator.usb
-  # - http.headers.Permissions-Policy.usb
+  - api.WorkerNavigator.usb
+  - http.headers.Permissions-Policy.usb
