--- a/features/webusb.yml.dist
+++ b/features/webusb.yml.dist
@@ -8,6 +8,12 @@ status:
     chrome_android: "61"
     edge: "79"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "61"
+  #   chrome_android: "61"
+  #   edge: "79"
   - api.Navigator.usb
   - api.USB
   - api.USB.connect_event
@@ -97,3 +103,21 @@ compat_features:
   - api.USBOutTransferResult.USBOutTransferResult
   - api.USBOutTransferResult.bytesWritten
   - api.USBOutTransferResult.status
+
+  # baseline: false
+  # support:
+  #   chrome: "88"
+  #   chrome_android: "88"
+  #   edge: "88"
+  - http.headers.Permissions-Policy.usb
+
+  # baseline: false
+  # support:
+  #   chrome: "101"
+  #   chrome_android: "101"
+  #   edge: "101"
+  - api.USBDevice.forget
+
+  # baseline: false
+  # support: {}
+  - api.WorkerNavigator.usb
