--- a/features/virtual-sensors.yml
+++ b/features/virtual-sensors.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-08-27
-name: WebDriver Sensors
-description: WebDriver Sensors are WebDriver extension commands for creating, deleting, getting, and setting readings for virtual sensors (sensors that do not depend on underlying hardware or operating system support).
+name: Virtual sensors
+description: The `CreateVirtualSensor` WebDriver command creates a virtual sensor for testing applications that use sensor APIs, without the need for real device sensors.
 spec: https://w3c.github.io/sensors/#automation
 group:
   - sensors
