Updates element-equivalent declaration descriptions

--- a/features/display-list-item.yml
+++ b/features/display-list-item.yml
@@ -1,5 +1,5 @@
 name: "display: list-item"
-description: "The `display: list-item` CSS declaration sets an element as a list item, generating display boxes as the `<li>` HTML element."
+description: "The `display: list-item` CSS declaration renders an element with the box layout of a `<li>` HTML element."
 spec: https://drafts.csswg.org/css-display-3/#list-items
 group:
   - css
