--- a/features/display-ruby.yml
+++ b/features/display-ruby.yml
@@ -1,5 +1,5 @@
 name: "display: ruby"
-description: "The `display: ruby` CSS declaration sets an element as a ruby annotation layout container, as the `<ruby>` HTML element. Child elements may use the declaration equivalents of `<ruby>` internal elements such as `display: ruby-base`"
+description: "The `display: ruby` CSS declaration renders an element with the box layout of a `<ruby>` HTML element. Child elements may use equivalents to `<ruby>` internal elements such as `display: ruby-base` for `<rb>`."
 spec: https://drafts.csswg.org/css-display-3/#layout-specific-display
 group:
   - css
