--- a/features/display-table.yml
+++ b/features/display-table.yml
@@ -1,5 +1,5 @@
 name: "display: table"
-description: "The `display: table` CSS declaration sets an element as a table layout container, as the `<table>` HTML element. Child elements may use the declaration equivalents of `<table>` internal elements such as `display: table-row`"
+description: "The `display: table` CSS declaration renders an element with the box layout of a `<table>` HTML element. Child elements may use equivalents to `<table>` internal elements such as `display: table-row` for `<tr>`."
 spec: https://drafts.csswg.org/css-display-3/#layout-specific-display
 caniuse: css-table
 group: css
