--- a/features/display-contents.yml
+++ b/features/display-contents.yml
@@ -1,7 +1,7 @@
 name: "display: contents"
-description: "The `display: contents` CSS declaration sets an element to display only its contents, not itself. The element does not generate a display box."
+description: "The `display: contents` CSS declaration sets an element to display only its contents, not itself. The element does not generate a display box and may lose semantic or accesibility features."
 spec: https://drafts.csswg.org/css-display-3/#box-generation
-caniuse: css-display-contents
+# caniuse: css-display-contents
 group: css
 compat_features:
   - css.properties.display.contents
