Flip description to start with attributes

--- a/features/shadow-parts.yml
+++ b/features/shadow-parts.yml
@@ -1,5 +1,5 @@
 name: Shadow Parts
-description: The `::part()` CSS pseudo-element selects named elements within a shadow DOM that have been exposed by a web component for styling. The `part` and `exportparts` HTML attributes expose elements as named parts.
+description: The `part` and `exportparts` HTML attributes expose elements of a shadow DOM as named parts. The `::part()` CSS pseudo-element selects named parts for styling.
 spec: https://drafts.csswg.org/css-shadow-parts-1/
 group:
   - selectors
