--- a/features/letter-spacing.yml
+++ b/features/letter-spacing.yml
@@ -1,5 +1,5 @@
 name: Letter spacing
-description: The CSS `letter spacing` property controls the amount of space between each letter in a given element or block of text. Supported values include `em`, `rem`, `px`, and the `normal` property, which resets to the font's default.
+description: The `letter-spacing` CSS property controls the amount of space between each letter in an element or block of text.
 spec: https://drafts.csswg.org/css-text-4/#letter-spacing-property
 caniuse: css-letter-spacing
 compat_features:
