--- a/features/overflow-wrap.yml
+++ b/features/overflow-wrap.yml
@@ -1,5 +1,5 @@
 name: Overflow wrap
-description: The CSS `overflow wrap` property allows the browser to break a line of text onto multiple lines inside the targeted element in an otherwise unbreakable place to prevent overflow.
+description: The `overflow-wrap` CSS property breaks a line of text onto multiple lines inside the targeted element in an otherwise unbreakable place to prevent overflow.
 spec: https://drafts.csswg.org/css-text-4/#overflow-wrap-property
 caniuse: wordwrap
 compat_features:
