--- a/groups/parsing-and-serialization.yml
+++ b/groups/parsing-and-serialization.yml
@@ -1,3 +1,3 @@
 # Caniuse lumps all parsing/serialization of html and xml into one feature.
 # For Web Features, they are separate features in a group.
-name: Parsing and Serialization
+name: Parsing and serialization
