Some fixes per Dietrich

--- a/features/wasm-mutable-globals.yml
+++ b/features/wasm-mutable-globals.yml
@@ -1,4 +1,4 @@
-name: WebAssembly import & export of mutable globals
+name: WebAssembly import and export of mutable globals
 description: An extension to WebAssembly import and export of mutable global variables.
 spec: https://webassembly.github.io/gc/core/bikeshed/
 caniuse: wasm-mutable-globals
