--- a/features/wasm.yml
+++ b/features/wasm.yml
@@ -1,5 +1,5 @@
 name: WebAssembly
-description: WebAssembly or "wasm" is a new portable, size- and load-time-efficient format suitable for compilation to the web.
+description: WebAssembly or "WASM" is a new portable, size- and load-time-efficient binary instruction format suitable for compilation to the web.
 spec: https://webassembly.github.io/gc/core/bikeshed/
 caniuse: wasm
 compat_features:
