--- a/features/wasm-bigint.yml
+++ b/features/wasm-bigint.yml
@@ -1,6 +1,6 @@
 name: WebAssembly BigInt to i64 conversion in JS
-description: An extension to the WebAssembly JS API for bidrectionally converting BigInts and 64-bit WebAssembly integer values.
-spec: https://webassembly.github.io/spec/js-api/
+description: An extension to the WebAssembly JS API for bidirectionally converting BigInts and 64-bit WebAssembly integer values.
+spec: https://webassembly.github.io/spec/js-api/#ref-for-syntax-numtype①⓪
 caniuse: wasm-bigint
 compat_features:
   - webassembly.BigInt-to-i64-integration
