--- a/features/draft/spec/fs.yml.dist
+++ b/features/draft/spec/fs.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "86"
+    chrome_android: "109"
     edge: "86"
     firefox: "111"
     firefox_android: "111"
@@ -34,6 +35,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "86"
+  #   chrome_android: "109"
   #   edge: "86"
   #   firefox: "111"
   #   firefox_android: "111"
