--- a/features/draft/spec/serial.yml.dist
+++ b/features/draft/spec/serial.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "130"
 compat_features:
   # baseline: false
   # support:
@@ -40,5 +41,6 @@ compat_features:
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "130"
   - api.SerialPort.connected
