--- a/features/webhid.yml.dist
+++ b/features/webhid.yml.dist
@@ -3,9 +3,7 @@
 
 status:
   baseline: false
-  support:
-    chrome: "89"
-    edge: "89"
+  support: {}
 compat_features:
   # baseline: false
   # support:
@@ -14,7 +12,6 @@ compat_features:
   #   edge: "89"
   - http.headers.Permissions-Policy.hid
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "89"
@@ -44,3 +41,8 @@ compat_features:
   - api.HIDInputReportEvent.device
   - api.HIDInputReportEvent.reportId
   - api.Navigator.hid
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - api.WorkerNavigator.hid
