--- a/features/box-decoration-break.yml.dist
+++ b/features/box-decoration-break.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "130"
+    chrome_android: "130"
     firefox: "32"
     firefox_android: "32"
 compat_features:
