--- a/features/draft/spec/webusb.yml.dist
+++ b/features/draft/spec/webusb.yml.dist
@@ -3,18 +3,8 @@
 
 status:
   baseline: false
-  support:
-    chrome: "101"
-    chrome_android: "101"
-    edge: "101"
+  support: {}
 compat_features:
-  # baseline: false
-  # support:
-  #   chrome: "70"
-  #   chrome_android: "70"
-  #   edge: "79"
-  - api.WorkerNavigator.usb
-
   # baseline: false
   # support:
   #   chrome: "88"
@@ -22,10 +12,14 @@ compat_features:
   #   edge: "88"
   - http.headers.Permissions-Policy.usb
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "101"
   #   chrome_android: "101"
   #   edge: "101"
   - api.USBDevice.forget
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - api.WorkerNavigator.usb
