--- a/features/font-loading.yml.dist
+++ b/features/font-loading.yml.dist
@@ -134,7 +134,6 @@ compat_features:
   #   firefox_android: "105"
   - api.FontFace.worker_support
   - api.FontFaceSet.worker_support
-  - api.FontFaceSetLoadEvent.worker_support
 
   # baseline: false
   # support:
@@ -147,3 +146,9 @@ compat_features:
   #   firefox: "62"
   #   firefox_android: "62"
   - api.FontFace.variationSettings
+
+  # baseline: false
+  # support:
+  #   firefox: "105"
+  #   firefox_android: "105"
+  - api.FontFaceSetLoadEvent.worker_support
