--- a/features/intl-locale-info.yml.dist
+++ b/features/intl-locale-info.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "130"
+    chrome_android: "130"
     safari: "17"
     safari_ios: "17"
 compat_features:
