--- a/features/web-cryptography.yml.dist
+++ b/features/web-cryptography.yml.dist
@@ -108,18 +108,6 @@ compat_features:
   #   safari_ios: "11"
   - api.SubtleCrypto.deriveBits
   - api.SubtleCrypto.deriveKey
-
-  # baseline: high
-  # baseline_low_date: ≤2020-03-24
-  # baseline_high_date: ≤2022-09-24
-  # support:
-  #   chrome: "41"
-  #   chrome_android: "41"
-  #   edge: "79"
-  #   firefox: "34"
-  #   firefox_android: "34"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
   - api.SubtleCrypto.deriveKey.derivedKeyAlgorithm_option_aes
   - api.SubtleCrypto.deriveKey.derivedKeyAlgorithm_option_hmac
 
@@ -144,8 +132,8 @@ compat_features:
   #   edge: "79"
   #   firefox: "119"
   #   firefox_android: "119"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   safari: "11"
+  #   safari_ios: "11"
   - api.SubtleCrypto.deriveKey.derivedKeyAlgorithm_option_hkdf
   - api.SubtleCrypto.deriveKey.derivedKeyAlgorithm_option_pbkdf2
 
