--- a/features/notifications.yml
+++ b/features/notifications.yml
@@ -4,7 +4,7 @@ name: Notifications
 #
 # See `features/notifications-apps.yml` for the Notifications feature for mobile
 # browsers that have platform-specific requirements and aligns with Caniuse.
-description: The Notifications API displays messages to the user outside of the browser, typically using the notification system of the host operating system. This feature is solely client-side, and does not integrate with server-originating notifications.
+description: The Notifications API displays messages to the user, typically using the notification system of the host operating system.
 spec: https://notifications.spec.whatwg.org/
 # Computing from the ServiceWorker feature since that gets us a baseline
 # which matches the general availability of the feature given platform
