--- a/features/notifications-apps.yml
+++ b/features/notifications-apps.yml
@@ -4,7 +4,7 @@ name: Notifications from service workers and installed apps
 #
 # See `features/notifications.yml` for the full Notifications feature, which
 # does not align with Caniuse.
-description: "The Notifications API displays messages to the user, with platform-specific requirements in some cases. Chrome Android supports notifications from installed service workers, and Safari iOS supports notifications from websites that have been bookmarked on the homescreen."
+description: The Notifications API, when used from a service worker or home screen app, displays messages to the user, typically using the notification system of the host operating system. Chrome Android supports notifications from installed service workers, and Safari iOS supports notifications from websites that have been added to the home screen."
 spec: https://notifications.spec.whatwg.org/
 caniuse: notifications
 status:
