--- a/features/wasm-bulk-memory.yml.dist
+++ b/features/wasm-bulk-memory.yml.dist
@@ -6,8 +6,8 @@ status:
   baseline_low_date: 2021-10-25
   baseline_high_date: 2024-04-25
   support:
-    chrome: ≤80
-    chrome_android: "80"
+    chrome: "75"
+    chrome_android: "75"
     edge: ≤80
     firefox: "78"
     firefox_android: "79"
