--- a/features/wasm.yml.dist
+++ b/features/wasm.yml.dist
@@ -70,17 +70,18 @@ compat_features:
   - webassembly.api.Global.valueOf
 
   # baseline: high
-  # baseline_low_date: ≤2020-03-24
-  # baseline_high_date: ≤2022-09-24
+  # baseline_low_date: 2021-09-20
+  # baseline_high_date: 2024-03-20
   # support:
-  #   chrome: "69"
-  #   chrome_android: "69"
-  #   edge: ≤80
-  #   firefox: "62"
-  #   firefox_android: "62"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - webassembly.mutable-globals
+  #   chrome: "61"
+  #   chrome_android: "61"
+  #   edge: "16"
+  #   firefox: "58"
+  #   firefox_android: "58"
+  #   safari: "15"
+  #   safari_ios: "15"
+  - webassembly.api.compileStreaming_static
+  - webassembly.api.instantiateStreaming_static
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: low
