--- a/features/multi-column.yml.dist
+++ b/features/multi-column.yml.dist
@@ -73,6 +73,19 @@ compat_features:
   #   safari_ios: "10"
   - css.properties.column-gap.multicol_context
 
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "79"
+  #   firefox: "50"
+  #   firefox_android: "50"
+  #   safari: "9"
+  #   safari_ios: "9"
+  - css.properties.column-width.auto
+
   # baseline: false
   # support:
   #   chrome: "66"
