--- a/features/object-position.yml
+++ b/features/object-position.yml
@@ -3,6 +3,8 @@ description: The `object-position` CSS property places images, videos, and other
 spec: https://drafts.csswg.org/css-images-3/#the-object-position
 # object-fit on caniuse includes both object-fit and object-position.
 # `caniuse: object-fit` is set in object-fit.yml
+status:
+  compute_from: css.properties.object-position
 compat_features:
   - css.properties.object-position
   - css.properties.object-position.applies_to_iframe_elements
