--- a/features/white-space-collapse.yml
+++ b/features/white-space-collapse.yml
@@ -2,6 +2,8 @@ name: white-space-collapse
 description: The `white-space-collapse` CSS property sets whether new line characters are shown as line breaks, and whether multiple consecutive spaces are all displayed or combined.
 spec: https://drafts.csswg.org/css-text-4/#white-space-collapsing
 group: white-space
+status:
+  compute_from: css.properties.white-space-collapse
 compat_features:
   - css.properties.white-space-collapse
   - css.properties.white-space-collapse.break-spaces
