--- a/features/white-space-collapse.yml.dist
+++ b/features/white-space-collapse.yml.dist
@@ -13,8 +13,25 @@ status:
     safari: "17.4"
     safari_ios: "17.4"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2024-03-19
+  # support:
+  #   chrome: "114"
+  #   chrome_android: "114"
+  #   edge: "114"
+  #   firefox: "124"
+  #   firefox_android: "124"
+  #   safari: "17.4"
+  #   safari_ios: "17.4"
   - css.properties.white-space-collapse
   - css.properties.white-space-collapse.break-spaces
   - css.properties.white-space-collapse.collapse
   - css.properties.white-space-collapse.preserve
   - css.properties.white-space-collapse.preserve-breaks
+
+  # baseline: false
+  # support:
+  #   firefox: "124"
+  #   firefox_android: "124"
+  - css.properties.white-space-collapse.preserve-spaces
