--- a/features/popover.yml
+++ b/features/popover.yml
@@ -2,3 +2,9 @@ name: Popover
 description: The `popover` HTML attribute creates an overlay to display content on top of other page content. Popovers can be shown declaratively using HTML, or using the `showPopover()` method.
 spec: https://html.spec.whatwg.org/multipage/popover.html
 group: html
+# TODO: https://github.com/web-platform-dx/web-features/issues/1971
+# Status changed: https://github.com/web-platform-dx/web-features/pull/1797
+# 2024-09-18 — low → false — Safari on iOS has a bug that prevents dismissing popovers by touch.
+# References:
+# - https://github.com/mdn/browser-compat-data/issues/22927
+# - https://bugs.webkit.org/show_bug.cgi?id=267688
