Adds keys to existing animation features

--- a/features/animations-css.yml
+++ b/features/animations-css.yml
@@ -26,6 +26,7 @@ compat_features:
   - api.CSSKeyframesRule.length
   - api.CSSKeyframesRule.name
   - css.at-rules.keyframes
+  - css.at-rules.keyframes.named_range_keyframes
   - css.properties.animation
   - css.properties.animation-delay
   - css.properties.animation-direction
