--- a/features/animations-css.yml.dist
+++ b/features/animations-css.yml.dist
@@ -179,4 +179,5 @@ compat_features:
   #   chrome: "115"
   #   chrome_android: "115"
   #   edge: "115"
+  - css.at-rules.keyframes.named_range_keyframes
   - css.properties.animation-duration.auto
