--- a/features/scroll-driven-animations.yml
+++ b/features/scroll-driven-animations.yml
@@ -23,16 +23,29 @@ compat_features:
   - api.ViewTimeline.ViewTimeline
   - css.properties.animation-range
   - css.properties.animation-range-end
+  - css.properties.animation-range-end.normal
   - css.properties.animation-range-start
+  - css.properties.animation-range-start.normal
   - css.properties.animation-timeline
   - css.properties.animation-timeline.scroll
   - css.properties.animation-timeline.view
   - css.properties.animation.animation-timeline_included
   - css.properties.scroll-timeline
   - css.properties.scroll-timeline-axis
+  - css.properties.scroll-timeline-axis.block
+  - css.properties.scroll-timeline-axis.inline
+  - css.properties.scroll-timeline-axis.x
+  - css.properties.scroll-timeline-axis.y
   - css.properties.scroll-timeline-name
   - css.properties.timeline-scope
+  - css.properties.timeline-scope.all
+  - css.properties.timeline-scope.none
   - css.properties.view-timeline
   - css.properties.view-timeline-axis
+  - css.properties.view-timeline-axis.block
+  - css.properties.view-timeline-axis.inline
+  - css.properties.view-timeline-axis.x
+  - css.properties.view-timeline-axis.y
   - css.properties.view-timeline-inset
+  - css.properties.view-timeline-inset.auto
   - css.properties.view-timeline-name
