--- a/features/text-align.yml
+++ b/features/text-align.yml
@@ -1,10 +1,10 @@
 name: Text align
 description: The `text-align` CSS property sets the horizontal placement of the inner content of a block element.
 spec: https://drafts.csswg.org/css-text-4/#text-align-property
+status:
+  compute_from: css.properties.text-align
 compat_features:
   - css.properties.text-align
-  - css.properties.text-align-last
-  - css.properties.text-align-last.auto
   - css.properties.text-align.center
   - css.properties.text-align.end
   - css.properties.text-align.justify
