add text ident hanging and each line

--- a/features/letter-spacing.yml.dist
+++ b/features/letter-spacing.yml.dist
@@ -16,3 +16,4 @@ status:
 compat_features:
   - css.properties.letter-spacing
   - css.properties.letter-spacing.normal
+  - svg.global_attributes.letter-spacing
