--- a/features/line-break.yml
+++ b/features/line-break.yml
@@ -1,5 +1,5 @@
 name: Line break
-description: The `line-break` CSS property defines how strictly to apply rules for wrapping text to new lines, especially for symbols and punctuations.
+description: The `line-break` CSS property defines how strictly to apply rules for wrapping text to new lines, especially for symbols and punctuation.
 spec: https://drafts.csswg.org/css-text-4/#line-break-property
 compat_features:
   - css.properties.line-break
