--- a/features/overflow-wrap.yml
+++ b/features/overflow-wrap.yml
@@ -1,5 +1,5 @@
 name: Overflow wrap
-description: The `overflow-wrap` CSS property breaks a line of text onto multiple lines inside the targeted element in an otherwise unbreakable place to prevent overflow. The legacy name is `word-wrap`.
+description: The `overflow-wrap` CSS property breaks a line of text onto multiple lines inside the targeted element in an otherwise unbreakable place to prevent overflow. The legacy property is `word-wrap`.
 spec: https://drafts.csswg.org/css-text-4/#overflow-wrap-property
 caniuse: wordwrap
 compat_features:
