--- a/features/word-spacing.yml
+++ b/features/word-spacing.yml
@@ -4,3 +4,4 @@ spec: https://drafts.csswg.org/css-text-4/#word-spacing-property
 compat_features:
   - css.properties.word-spacing
   - css.properties.word-spacing.normal
+  - svg.global_attributes.word-spacing
