--- a/features/letter-spacing.yml
+++ b/features/letter-spacing.yml
@@ -5,3 +5,4 @@ caniuse: css-letter-spacing
 compat_features:
   - css.properties.letter-spacing
   - css.properties.letter-spacing.normal
+  - svg.global_attributes.letter-spacing
