add text spacing trim

--- a/features/word-spacing.yml.dist
+++ b/features/word-spacing.yml.dist
@@ -16,3 +16,4 @@ status:
 compat_features:
   - css.properties.word-spacing
   - css.properties.word-spacing.normal
+  - svg.global_attributes.word-spacing
