Adjustments, add text group

--- a/features/text-spacing-trim.yml.dist
+++ b/features/text-spacing-trim.yml.dist
@@ -9,3 +9,7 @@ status:
     edge: "123"
 compat_features:
   - css.properties.text-spacing-trim
+  - css.properties.text-spacing-trim.normal
+  - css.properties.text-spacing-trim.space-all
+  - css.properties.text-spacing-trim.space-first
+  - css.properties.text-spacing-trim.trim-start
