--- a/features/text-transform.yml
+++ b/features/text-transform.yml
@@ -1,6 +1,8 @@
 name: Text transform
 description: The `text-transform` CSS property sets text case and capitalization.
 spec: https://drafts.csswg.org/css-text-4/#text-transform-property
+status:
+  compute_from: css.properties.text-transform
 compat_features:
   - css.properties.text-transform
   - css.properties.text-transform.capitalize
