update text size adjust description

--- a/features/text-size-adjust.yml
+++ b/features/text-size-adjust.yml
@@ -1,6 +1,7 @@
-name: Text size adjust
-description: The `text-size-adjust` CSS property modifies the browser's default text size adjustment.
+name: text-size-adjust
+description: The `text-size-adjust` CSS property disables or modifies the browser's default text size adjustment for small screen sizes.
 spec: https://drafts.csswg.org/css-size-adjust-1/#adjustment-control
+caniuse: text-size-adjust
 compat_features:
   - css.properties.text-size-adjust
   - css.properties.text-size-adjust.auto
