updated names and added groups

--- a/features/letter-spacing.yml
+++ b/features/letter-spacing.yml
@@ -1,6 +1,7 @@
-name: Letter spacing
+name: letter-spacing
 description: The `letter-spacing` CSS property controls the amount of space between each letter in an element or block of text.
 spec: https://drafts.csswg.org/css-text-4/#letter-spacing-property
+group: text
 caniuse: css-letter-spacing
 compat_features:
   - css.properties.letter-spacing
