--- a/features/line-break.yml
+++ b/features/line-break.yml
@@ -1,6 +1,7 @@
-name: Line break
+name: line-break
 description: The `line-break` CSS property defines how strictly to apply rules for wrapping text to new lines, especially for symbols and punctuation.
 spec: https://drafts.csswg.org/css-text-4/#line-break-property
+group: text-wrap
 compat_features:
   - css.properties.line-break
   - css.properties.line-break.anywhere
