--- a/features/overflow-wrap.yml
+++ b/features/overflow-wrap.yml
@@ -1,6 +1,7 @@
-name: Overflow wrap
+name: overflow-wrap
 description: The `overflow-wrap` CSS property breaks a line of text onto multiple lines inside the targeted element in an otherwise unbreakable place to prevent overflow. The legacy property is `word-wrap`.
 spec: https://drafts.csswg.org/css-text-4/#overflow-wrap-property
+group: text-wrap
 caniuse: wordwrap
 compat_features:
   - css.properties.overflow-wrap
