--- a/features/text-indent-hanging.yml
+++ b/features/text-indent-hanging.yml
@@ -1,5 +1,6 @@
-name: Text indent hanging
+name: text-indent-hanging
 description: The `text-indent-hanging` CSS property indents all line except the first.
 spec: https://drafts.csswg.org/css-text-4/#text-indent-property
+group: text
 compat_features:
   - css.properties.text-indent.hanging
