--- a/features/text-justify.yml
+++ b/features/text-justify.yml
@@ -1,6 +1,7 @@
-name: Text justify
+name: text-justify
 description: The `text-justify` CSS property sets the justification method of text when `text-align` is set to the `justify` value.
 spec: https://drafts.csswg.org/css-text-4/#text-justify-property
+group: text
 compat_features:
   - css.properties.text-justify
   - css.properties.text-justify.auto
