--- a/features/text-transform.yml
+++ b/features/text-transform.yml
@@ -1,6 +1,7 @@
-name: Text transform
+name: text-transform
 description: The `text-transform` CSS property sets text case and capitalization.
 spec: https://drafts.csswg.org/css-text-4/#text-transform-property
+group: text
 status:
   compute_from: css.properties.text-transform
 compat_features:
