--- a/features/word-break.yml
+++ b/features/word-break.yml
@@ -1,6 +1,7 @@
-name: Word break
+name: word-break
 description: The `word-break` CSS property sets the line break within words.
 spec: https://drafts.csswg.org/css-text-4/#word-break-property
+group: text-wrap
 caniuse: word-break
 compat_features:
   - css.properties.word-break
