--- a/features/text-align.yml
+++ b/features/text-align.yml
@@ -1,6 +1,7 @@
-name: Text align
+name: text-align
 description: The `text-align` CSS property sets the horizontal placement of the inner content of a block element.
 spec: https://drafts.csswg.org/css-text-4/#text-align-property
+group: text
 status:
   compute_from: css.properties.text-align
 compat_features:
