--- a/features/navigator.yml
+++ b/features/navigator.yml
@@ -1,16 +1,5 @@
 name: Navigator
-description: The `window.navigator` API represents the user agent and its state. It's also the generic global object under which many other APIs are located, such as `clipboard` or `wakeLock`.
+description: "The `window.navigator` API represents the user agent and its state. It's also the generic global object under which many other APIs are located, such as `clipboard` or `wakeLock`."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#the-navigator-object
-status:
-  compute_from: api.Navigator
 compat_features:
   - api.Navigator
-  - api.Navigator.cookieEnabled
-  - api.Navigator.hardwareConcurrency
-  - api.Navigator.language
-  - api.Navigator.languages
-  - api.Navigator.onLine
-  - api.Navigator.pdfViewerEnabled
-  - api.Navigator.registerProtocolHandler
-  - api.Navigator.unregisterProtocolHandler
-  - api.Navigator.userAgent
