caniuse comments and alignments, misc key fixes

--- a/features/client-identification.yml
+++ b/features/client-identification.yml
@@ -3,3 +3,4 @@ description: "The Navigator.userAgent read-only property returns the user agent 
 spec: https://html.spec.whatwg.org/multipage/system-state.html#the-navigator-object
 compat_features:
   - api.Navigator.userAgent
+  - api.WorkerNavigator.userAgent
