--- a/features/hardware-concurrency.yml.dist
+++ b/features/hardware-concurrency.yml.dist
@@ -11,3 +11,4 @@ status:
     firefox_android: "48"
 compat_features:
   - api.Navigator.hardwareConcurrency
+  - api.WorkerNavigator.hardwareConcurrency
