--- a/features/pdf-viewer.yml
+++ b/features/pdf-viewer.yml
@@ -1,5 +1,9 @@
 name: pdfViewerEnabled
 description: "The pdfViewerEnabled read-only property of the Navigator interface indicates whether the browser supports inline display of PDF files when navigating to them. If inline viewing is not supported the PDF is downloaded and may then be handled by some external application."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#pdf-viewing-support
+# Caniuse has a feature for PDF viewing generally, which is marked not supported for
+# Chrome/Firefox Android, but also has this entry from the BCD key shown all green.
+# Not blocking on finding a resolution here, but should figure it out at some point.
+#caniuse: pdf-viewer
 compat_features:
   - api.Navigator.pdfViewerEnabled
